messing around with tachyons styling. Got comments page ordered - although still issues with search box and buttons on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,8 @@
 .articles__navbar {
   background-color: #bebec5;
 }
+
+.SingleArticle__votes {
+  display: flex;
+  flex-direction: row;
+}
